# reflex

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES  conanfile.txt  pcons-build.py
cli/: CMakeLists.txt  README.md  pcons-build.py
cli/include/reflex/: cli.hpp  shell.hpp
cli/include/reflex/cli/: base.hpp  completion.hpp
cli/include/reflex/shell/: codes.hpp  completion_session.hpp  config.hpp  history.hpp  term.hpp
cli/src/: _bash_source.sh  _zsh_source.sh  cli-base.cppm  cli-completion.cppm  cli.cpp  cli.cppm  shell-term.cppm  shell.cppm
cli/tests/: CMakeLists.txt  bitflag-enum.cpp  fake-git-shell.cpp  fake-git.cpp  git.cppm  pcons-build.py  pipe_capture.cppm  test-dev.cpp  test-dynamic-completion.cpp  test-echo.cpp  test-git.cpp  testutils.cpp  testutils.cppm
cli/tests/include/: bitflag_cli.hpp  git.hpp  pipe_capture.hpp  testutils.hpp
cli/tests/src/: testutils.cpp
cmake/: ReflexCppModules.cmake  ReflexRequirements.cmake  ReflexTesting.cmake  Sanitizers.cmake  reflexConfig.cmake.in
core/: CMakeLists.txt  README.md  pcons-build.py
core/include/reflex/: caseconv.hpp  concepts.hpp  const_assert.hpp  constant.hpp  constant_span.hpp  constant_string.hpp  core.hpp  debug.hpp  derive.hpp  diags.hpp  enum.hpp  enum_flags.hpp  exception.hpp  format.hpp  formatters.hpp  ignore.hpp  match.hpp  meta.hpp  named_arg.hpp  named_tuple.hpp  overload_set.hpp  parse.hpp  scope_guard.hpp  tag_invoke.hpp  to_tuple.hpp  utils.hpp  visit.hpp
core/include/reflex/ctp/: core.hpp  ctp.hpp  custom.hpp  param.hpp  serialize.hpp
core/include/reflex/heapless/: string.hpp  vector.hpp
core/include/reflex/meta/: reg.hpp
core/include/reflex/views/: cartesian_product.hpp
core/modules/reflex/: core.cppm
core/src/: caseconv.cppm  concepts.cppm  const_assert.cppm  constant_string.cppm  core.cppm  exception.cppm  formatters.cppm  match.cppm  meta.cppm  named_arg.cppm  parse.cpp  parse.cppm  to_tuple.cppm  utils.cppm  visit.cppm
core/src/meta/: reg.cppm  tu.cppm
core/src/views/: cartesian_product.cppm
core/tests/: CMakeLists.txt  pcons-build.py  test-caseconv.cpp  test-constant-string.cpp  test-constant.cpp  test-derive.cpp  test-enum-flags.cpp  test-match.cpp  test-named-apply.cpp  test-named-tuple.cpp  test-overload-set.cpp  test-parse.cpp  test-to-tuple.cpp  test-visit.cpp
core/tests/heapless/: CMakeLists.txt  test-string.cpp
core/tests/meta/: CMakeLists.txt  annotation-queries.cpp  is_functional.cpp  reg-mod.cppm  reg-mod.hpp  reg-mod1.cppm  reg-mod1.hpp  reg-mod2.cppm  reg-mod2.hpp  reg.cpp  tu-mod.cppm  tu.cpp
core/tests/views/: cartesian-product.cpp
jinja/: CMakeLists.txt  pcons-build.py
jinja/include/reflex/: jinja.hpp
jinja/include/reflex/jinja/: context.hpp  expr.hpp
jinja/src/: expr.cppm  jinja.cppm
jinja/tests/: CMakeLists.txt  expr.cpp  parse.cpp  pcons-build.py  types.cpp  types.cppm  types.hpp
lib/: CMakeLists.txt
lib/cli/: CMakeLists.txt  README.md
lib/di/: CMakeLists.txt  README.md
lib/di/tests/: CMakeLists.txt  test-concept-binding.cpp  test-concepts.cpp  test-interfaces.cpp  test-simple.cpp
lib/poly/: CMakeLists.txt  README.md
lib/qt/: CMakeLists.txt  README.md
lib/qt/cmake/: ReflexQt.cmake  reflex_qt_dump.cpp.in  reflex_qt_export_json.cpp.in  reflex_qt_moc.cpp.in  reflex_qt_qmltypes_registration.cpp.in
lib/qt/examples/: CMakeLists.txt
lib/qt/examples/clock/: .qmlls.ini  CMakeLists.txt
lib/qt/examples/clock/qml/: App.qml
lib/qt/examples/clock/qml/Clock/: main.qml  qmldir
lib/qt/examples/clock/src/: ClockController.hpp  main.cpp
lib/qt/examples/example1/: CMakeLists.txt
lib/qt/examples/example1-qt/: CMakeLists.txt
lib/qt/examples/example1-qt/qml/: App.qml
lib/qt/examples/example1-qt/src/: Example.hpp  main.cpp
lib/qt/examples/example1/qml/: App.qml
lib/qt/examples/example1/src/: Example.cpp  Example.hpp  main.cpp
lib/qt/include/reflex/: qt.hpp
lib/qt/include/reflex/qt/: connection_guard.hpp  dump.hpp  format.hpp  gadget.hpp  object.hpp
lib/qt/include/reflex/qt/detail/: annotations.hpp  gadget_impl.hpp  meta_strings.hpp  metatype.hpp  moc.hpp  object_impl.hpp
lib/qt/src/: moc.cpp
lib/qt/tests/: CMakeLists.txt  SimpleWidget.hpp  ref_object.cpp  ref_object.hpp  test-qobject.cpp  test-widgets.cpp  test_object.hpp
lib/qt/tests/qml/: CMakeLists.txt  test-qml.cpp  tst_getSetPropertyController.qml  tst_invocableTestController.qml  tst_signalSlotController.qml  tst_simplePropertyController.qml
lib/serialize/tests/: CMakeLists.txt  test-poly.cpp  test-simple.cpp
lib/testing/: CMakeLists.txt  README.md
lib/testing/cmake/: ReflexAddTests.cmake  ReflexTesting.cmake
lib/testing/examples/: CMakeLists.txt  fixtures.cpp  hello-world.cpp
lib/testing/include/reflex/: testing.hpp  testing_main.hpp
lib/testing/include/reflex/testing/: context.hpp  current.hpp  evaluator.hpp  expression.hpp  main_impl.hpp  parametrize.hpp  reflected_ref.hpp  reporter.hpp  test_suite.hpp  validator.hpp  view.hpp
lib/testing/src/: test_main.cpp
lib/testing/tests/: CMakeLists.txt  test-context.cpp  test-parametrize.cpp  test-testcase.cpp  test-testfixture.cpp  test-throws.cpp
package/hello-cli/: CMakeLists.txt  README.md  hello-cli.cpp
poly/: CMakeLists.txt  README.md  pcons-build.py
reflex_build/: _test_runner.py  config.py  requirements.py  testing.py
serde/: CMakeLists.txt  README.md  pcons-build.py
serde/include/reflex/: serde.hpp
serde/include/reflex/serde/: annotations.hpp  bson.hpp  bson_value.hpp  json.hpp  json_value.hpp  object_visit.hpp  poly.hpp
serde/modules/reflex/: serde.cppm  serde_bson.cppm  serde_json.cppm
serde/programs/: CMakeLists.txt  convert.cpp
serde/src/: annotations.cppm  bson.cppm  bson_value.cppm  json.cppm  json_value.cppm  object_visit.cppm  poly.cppm  serde.cppm  serde_bson.cppm  serde_json.cppm
serde/tests/: CMakeLists.txt  pcons-build.py  test-json-value.cpp  test-object-visit.cpp  test-serde-bson.cpp  test-serde-json-bson.cpp  test-serde-json.cpp  test-serde.cpp  test-xml.cpp  xml++.cppm
std/: CMakeLists.txt
(+72 files in other folders)
